# iai_common_msgs

iai_pepper_server_msgs/: CMakeLists.txt  package.xml
iai_pepper_server_msgs/srv/: PepperAnimate.srv  PepperPointAndSay.srv  PepperSay.srv  PepperShowAndSay.srv
