<?xml version="1.0"?>
<package>
  <name>iai_pepper_server_msgs</name>
  <version>0.0.1</version>
  <description>
     Message definitions to talk with the Pepper Server.
  </description>

  <maintainer email="sasjonge@uni-bremen.de">Sascha Jongebloed</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
